--- a/teamdir.html
+++ b/teamdir.html
@@ -1,1 +1,27 @@
-test
+<p>Below is a list of our active team members </p>
+</br>
+<h3>Logan L Johnson - Owner</h3>
+</br>
+</br>
+<h3>Arianna M. Banga-Dilworth - Co-owner</h3>
+</br>
+<p>AMOLITH SEREGION - Aesthetics/Developer</p>
+</br>
+<p>AIDAN BENNEWISE- Development team member</p>
+</br>
+<p>BRODY M MILLER - Community Manager</p>
+</br>
+<p>BENJAMIN CEDERBERG- Community Manager</p>
+</br>
+<p> DANIEL MITCHELL - Moderator & Video Admin</p>
+</br>
+<p>GARRETT LAWRENCE (SilverTheHedgehog)- Community Manager</p>
+</br>
+<p>JOSH GILAND (FSM) - Moderator</p>
+</br>
+<p>MADI E. MATHERS - Development team member</p>
+</br>
+<p> SETH DIAZ - Founding member and community concept developer</p>
+</br>
+<p> THOMAS CASTLEMAN - CYGO Desktop and Drauger OS integration developer</p>
+</br>
